movie_recommendation_backend/k8s/configmap.yml
# k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-recommendation
  labels:
    app: movie-recommendation-backend
